better vertical spacing - avoid select box text clipping bug in Chrome on Windows 8

--- a/http/style.css
+++ b/http/style.css
@@ -44,6 +44,7 @@ nav > section {
 nav > section {
   border-bottom: 1px solid #BBCEE4;
   display: none;
+  line-height: 30px;
 }
 
 nav p {
@@ -87,8 +88,6 @@ p.inline-select label {
 p.inline-select select {
   margin: 0;
   width: 200px;
-  height: 24px;
-  line-height: 24px;
 }
 
 p.inline-select {
